# RobitMQ

./: CMakeLists.txt  RobitMQ.json  oldMakeLists.txt
include/: Configuration.h  ConnectionInfo.h  JSONConfig.h  Topics.h
publisher/: main.cpp
src/: JSONConfig.cpp
subscriber/: main.cpp
